# electrs

./: Cargo.toml  config_spec.toml
electrs-json-rpc/: Cargo.toml
electrs-json-rpc/electrs-json-rpc-macro/: Cargo.toml
electrs-json-rpc/electrs-json-rpc-macro/src/: client.rs  lib.rs  service.rs
electrs-json-rpc/src/: _reexports.rs  client.rs  json_encoded_types.rs  lib.rs  message_io.rs  service.rs  session.rs  test.rs
electrs-json-rpc/src/json_types/: errors.rs  json_rpc_error.rs  json_rpc_error_code.rs  json_rpc_id.rs  json_rpc_message.rs  json_rpc_params.rs  json_rpc_request.rs  json_rpc_requests.rs  json_rpc_response.rs  json_rpc_responses.rs  mod.rs
rpc/rpc-macro/: Cargo.toml
rpc/rpc-macro/src/: lib.rs
rpc/src/: lib.rs
src/: chain.rs  config.rs  daemon.rs  db.rs  electrum.rs  lib.rs  mempool.rs  metrics.rs  server.rs  signals.rs  types.rs
src/new_rpc/: json_encoded_types.rs  lib.rs
