[package]
name = "electrs"
version = "0.9.0"
authors = ["Roman Zeyde <me@romanzey.de>"]
edition = "2018"
build = "build.rs"

[features]
default = ["rocksdb/zstd"]

[package.metadata.configure_me]
spec = "config_spec.toml"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.26", features = ["use-serde", "rand"] }
bitcoincore-rpc = "0.13"
configure_me = "0.4"
crossbeam-channel = "0.5"
env_logger = "0.7"
hyper = "0.10"
log = "0.4"
prometheus = { version = "0.11", features = ["process"] }
rayon = "1.5"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "3d32011909367612ae59761bd786fe7e5ee14c46", default-features = false }
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.3"

[build-dependencies]
configure_me_codegen = "0.4"